Ajout de la page et des onglets de prix de vente et d'achat

--- a/langs/en_US/condensedprices.lang
+++ b/langs/en_US/condensedprices.lang
@@ -20,7 +20,7 @@
 # Module label 'ModuleCondensedPricesName'
 ModuleCondensedPricesName = CondensedPrices
 # Module description 'ModuleCondensedPricesDesc'
-ModuleCondensedPricesDesc = CondensedPrices description
+ModuleCondensedPricesDesc = Module to edit massively buy and sale prices
 
 #
 # Admin page
