--- a/langs/fr_FR/condensedprices.lang
+++ b/langs/fr_FR/condensedprices.lang
@@ -46,7 +46,10 @@ CondensedPricesAboutPage = Page de détails de CondensedPrices
 #
 CondensedPricesArea = Home CondensedPrices
 MyPageName = My page name
-
+MinQty = Quantité minimale d'achat
+NewBuyingPrice = Nouveau prix d'achat
+NewDiscount = Nouvelle remise
+UPDATE = Mettre a jour
 #
 # Sample widget
 #
