--- a/langs/fr_FR/condensedprices.lang
+++ b/langs/fr_FR/condensedprices.lang
@@ -48,8 +48,14 @@ CondensedPricesArea = Home CondensedPrices
 MyPageName = My page name
 MinQty = Quantité minimale d'achat
 NewBuyingPrice = Nouveau prix d'achat
+NewSellingPrice = Nouveau prix de vente
 NewDiscount = Nouvelle remise
 UPDATE = Mettre a jour
+SalePricesTab = Prix de vente
+BuyPricesTab = Prix d'achat
+ChooseSupplierPls = Choose a Supplier to get the list of the products
+ChooseCustomerPls = Choose a customer to get the list of the products
+
 #
 # Sample widget
 #
