--- a/langs/fr_FR/condensedprices.lang
+++ b/langs/fr_FR/condensedprices.lang
@@ -44,7 +44,7 @@ CondensedPricesAboutPage = Page de détails de CondensedPrices
 #
 # Sample page
 #
-CondensedPricesArea = Home CondensedPrices
+CondensedPricesArea = Page de mise à jour des prix
 MyPageName = My page name
 MinQty = Quantité minimale d'achat
 NewBuyingPrice = Nouveau prix d'achat
@@ -53,8 +53,9 @@ NewDiscount = Nouvelle remise
 UPDATE = Mettre a jour
 SalePricesTab = Prix de vente
 BuyPricesTab = Prix d'achat
-ChooseSupplierPls = Choose a Supplier to get the list of the products
-ChooseCustomerPls = Choose a customer to get the list of the products
+ChooseSupplierPls = Choisissez un Fournisseur pour avoir la liste des prix
+ChooseCustomerPls = Choisissez un Client pour avoir la liste des prix
+UpdatePrices = Mettre à jour les prix
 
 #
 # Sample widget
