--- a/langs/fr_FR/condensedprices.lang
+++ b/langs/fr_FR/condensedprices.lang
@@ -47,9 +47,9 @@ CondensedPricesAboutPage = Page de détails de CondensedPrices
 CondensedPricesArea = Page de mise à jour des prix
 MyPageName = My page name
 MinQty = Quantité minimale d'achat
-NewBuyingPrice = Nouveau prix d'achat unitaire
-NewSellingPrice = Nouveau prix de vente unitaire
-BuyingPriceUnit = Prix d'achat à l'unité
+NewBuyingPrice = Nouveau PU d'achat
+NewSellingPrice = Nouveau PU de vente
+BuyingPriceUnit = PU d'achat
 NewDiscount = Nouvelle remise
 UPDATE = Mettre a jour
 SalePricesTab = Prix de vente
