--- a/langs/fr_FR/condensedprices.lang
+++ b/langs/fr_FR/condensedprices.lang
@@ -47,7 +47,7 @@ CondensedPricesAboutPage = Page de détails de CondensedPrices
 CondensedPricesArea = Page de mise à jour des prix
 MyPageName = My page name
 MinQty = Quantité minimale d'achat
-NewBuyingPrice = Nouveau PU d'achat
+NewBuyingPrice = Nouveau prix d'achat pour la quantité minimale
 NewSellingPrice = Nouveau PU de vente
 BuyingPriceUnit = PU d'achat
 NewDiscount = Nouvelle remise
